Update dependencies and version numbers

--- a/manifest.json
+++ b/manifest.json
@@ -1,11 +1,10 @@
 {
-	"id": "s3-image-uploader",
+	"id": "s3-image-uploader-ckt1031",
 	"name": "S3 Image Uploader",
-	"version": "0.99.1",
+	"version": "0.10.0",
 	"minAppVersion": "0.15.0",
 	"description": "This is an image uploader for Obsidian that allows you to self host images on AWS s3. This plugin is supported by advertisements.",
-	"author": "jvsteiner",
-	"authorUrl": "https://github.com/jvsteiner",
-	"fundingUrl": "https://www.buymeacoffee.com/jvsteiner",
+	"author": "jvsteiner (Forked: ckt1031)",
+	"authorUrl": "https://github.com/ckt1031/s3-image-uploader",
 	"isDesktopOnly": false
 }
