--- a/package.json
+++ b/package.json
@@ -1,36 +1,37 @@
 {
-	"name": "s3-image-uploader",
-	"version": "0.99.1",
-	"description": "This is an image uploading plugin for Obsidian (https://obsidian.md)",
-	"main": "main.js",
-	"scripts": {
-		"dev": "node esbuild.config.mjs",
-		"build": "tsc -noEmit -skipLibCheck && node esbuild.config.mjs production",
-		"version": "node version-bump.mjs && git add manifest.json versions.json"
-	},
-	"keywords": [],
-	"author": "jvsteiner@gmail.com",
-	"license": "MIT",
-	"devDependencies": {
-		"@types/mime-types": "^2.1.1",
-		"@types/node": "^18.11.18",
-		"@typescript-eslint/eslint-plugin": "5.29.0",
-		"@typescript-eslint/parser": "5.29.0",
-		"browser-resolve": "^2.0.0",
-		"builtin-modules": "3.3.0",
-		"detective": "^5.2.1",
-		"esbuild": "0.14.47",
-		"obsidian": "latest",
-		"process": "^0.11.10",
-		"tslib": "2.4.0",
-		"typescript": "4.7.4"
-	},
-	"dependencies": {
-		"@aws-sdk/client-s3": "3.317.0",
-		"@aws-sdk/fetch-http-handler": "^3.310.0",
-		"@aws-sdk/protocol-http": "^3.310.0",
-		"@aws-sdk/querystring-builder": "^3.310.0",
-		"@aws-sdk/types": "^3.310.0",
-		"@smithy/fetch-http-handler": "^2.2.7"
-	}
+  "name": "s3-image-uploader-ckt1031",
+  "version": "0.10.0",
+  "description": "This is an image uploading plugin for Obsidian (https://obsidian.md)",
+  "main": "main.js",
+  "scripts": {
+    "dev": "node esbuild.config.mjs",
+    "build": "tsc -noEmit -skipLibCheck && node esbuild.config.mjs production",
+    "version": "node version-bump.mjs && git add manifest.json versions.json"
+  },
+  "keywords": [],
+  "author": "jvsteiner@gmail.com",
+  "license": "MIT",
+  "devDependencies": {
+    "@types/mime-types": "^2.1.4",
+    "@types/node": "^20.11.16",
+    "@typescript-eslint/eslint-plugin": "6.20.0",
+    "@typescript-eslint/parser": "6.20.0",
+    "browser-resolve": "^2.0.0",
+    "builtin-modules": "3.3.0",
+    "detective": "^5.2.1",
+    "esbuild": "0.20.0",
+    "obsidian": "1.4.11",
+    "process": "^0.11.10",
+    "tslib": "2.6.2",
+    "typescript": "5.3.3"
+  },
+  "dependencies": {
+    "@aws-sdk/client-s3": "3.504.0",
+    "@aws-sdk/protocol-http": "^3.374.0",
+    "@aws-sdk/querystring-builder": "^3.374.0",
+    "@aws-sdk/types": "^3.502.0",
+    "@smithy/fetch-http-handler": "^2.4.1",
+    "browser-image-compression": "^2.0.2",
+    "crypto-hash": "^3.0.0"
+  }
 }
