--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "This is an image uploading plugin for Obsidian (https://obsidian.md)",
   "main": "main.js",
   "scripts": {
-    "dev": "node esbuild.config.mjs",
-    "build": "tsc -noEmit -skipLibCheck && node esbuild.config.mjs production",
-    "version": "node version-bump.mjs && git add manifest.json versions.json"
+    "dev": "bun esbuild.config.mjs",
+    "build": "tsc -noEmit -skipLibCheck && bun esbuild.config.mjs production",
+    "version": "bun version-bump.mjs && git add manifest.json versions.json"
   },
   "keywords": [],
   "author": "jvsteiner@gmail.com",
