--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,8 @@
 		"types": ["node"],
 		"typeRoots": ["node_modules/@types"],
 		"strictNullChecks": true,
+		"resolveJsonModule": true,
+		"allowSyntheticDefaultImports": true,
 		"lib": ["DOM", "ES5", "ES6", "ES7"]
 	},
 	"include": ["**/*.ts"]
