--- a/package.json
+++ b/package.json
@@ -36,7 +36,6 @@
     "browser-image-compression": "^2.0.2",
     "crypto-hash": "^3.0.0",
     "crypto-js": "^4.2.0",
-    "qrcode": "^1.5.3",
-    "rambda": "^9.0.1"
+    "qrcode": "^1.5.3"
   }
 }
