--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-	"id": "s3-image-uploader-ckt1031",
+	"id": "s3imageuploader",
 	"name": "S3 Image Uploader",
 	"version": "0.10.3",
 	"minAppVersion": "0.15.0",
