feat: replace SHA-1 with SHA-3 for file hashing and update dependencies

--- a/package.json
+++ b/package.json
@@ -13,27 +13,27 @@
   "license": "MIT",
   "devDependencies": {
     "@types/mime-types": "^2.1.4",
-    "@types/node": "^22.7.5",
+    "@types/node": "^22.8.7",
     "@types/qrcode": "^1.5.5",
-    "@typescript-eslint/eslint-plugin": "8.8.1",
-    "@typescript-eslint/parser": "8.8.1",
+    "@typescript-eslint/eslint-plugin": "8.12.2",
+    "@typescript-eslint/parser": "8.12.2",
     "browser-resolve": "^2.0.0",
     "builtin-modules": "4.0.0",
     "detective": "^5.2.1",
     "esbuild": "0.24.0",
     "obsidian": "1.7.2",
     "process": "^0.11.10",
-    "tslib": "2.7.0",
+    "tslib": "2.8.1",
     "typescript": "5.6.3"
   },
   "dependencies": {
-    "@aws-sdk/client-s3": "3.667.0",
+    "@aws-sdk/client-s3": "3.685.0",
     "@aws-sdk/protocol-http": "^3.374.0",
     "@aws-sdk/querystring-builder": "^3.374.0",
-    "@aws-sdk/types": "^3.667.0",
-    "@smithy/fetch-http-handler": "^3.2.9",
+    "@aws-sdk/types": "^3.679.0",
+    "@noble/hashes": "^1.5.0",
+    "@smithy/fetch-http-handler": "^4.0.0",
     "browser-image-compression": "^2.0.2",
-    "crypto-hash": "^3.1.0",
     "filesize": "^10.1.6",
     "qrcode": "^1.5.4"
   }
